cambio de namespace

--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -8,8 +8,8 @@
 			src="../../resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{
-				"NAMESPACE.zcashclose": "../../",
-				"NAMESPACE.zcashclose.test": "../"
+				"GASS.zcashclose": "../../",
+				"GASS.zcashclose.test": "../"
 			}'
 			data-sap-ui-animation="false"
 			data-sap-ui-compatVersion="edge"
